--- a/styles.css
+++ b/styles.css
@@ -540,3 +540,28 @@ body {
         height: calc(100% - 40px);
     }
 }
+
+/* Slideshow styles */
+.slideshow-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.slide-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 1;
+}
+
+.slide-image.active {
+    opacity: 1;
+    z-index: 2;
+}
