--- a/styles.css
+++ b/styles.css
@@ -238,10 +238,17 @@ body {
     line-height: 1.4;
 }
 
+.rss-item .rss-title {
+    margin-bottom: 5px;
+    color: #333;
+    line-height: 1.4;
+}
+
 .rss-item .rss-date {
     font-size: 0.8rem;
     color: #999;
-    margin-top: 5px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .rss-content {
